@@ -3,17 +3,19 @@ package pl.kurs.librarybooks.service;
 import lombok.AllArgsConstructor;
 import org.modelmapper.ModelMapper;
 import org.springframework.data.domain.Page;
+import org.springframework.http.HttpStatus;
+import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
 import pl.kurs.librarybooks.command.CreateBookCommand;
 import pl.kurs.librarybooks.command.UpdateBookCommand;
 import pl.kurs.librarybooks.dto.BookDTO;
 import pl.kurs.librarybooks.dto.GetBookDTO;
+import pl.kurs.librarybooks.dto.OverdueBookDTO;
 import pl.kurs.librarybooks.dto.StatusDTO;
 import pl.kurs.librarybooks.model.Book;
 
 import java.time.LocalDate;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @AllArgsConstructor
@@ -29,13 +31,20 @@ public class BookControllerService {
     }
 
     public GetBookDTO getBook(long id) {
-        return modelMapper.map(bookManagementService.get(id), GetBookDTO.class);
+        if(bookManagementService.getBorrowedDays(id) >= 14){
+            OverdueBookDTO response = modelMapper.map(bookManagementService.get(id), OverdueBookDTO.class);
+            response.setOverdue("Book is overdue by " + (bookManagementService.getBorrowedDays(id) - 14) + " days");
+            return response;
+        } else return modelMapper.map(bookManagementService.get(id), GetBookDTO.class);
     }
 
     public List<GetBookDTO> getBooks(int page, int size, String value) {
         Page<Book> booksPage = bookManagementService.getAll(page, size, value);
         List<Book> booksList = booksPage.getContent();
-        return booksList.stream().map(x -> modelMapper.map(x, GetBookDTO.class)).collect(Collectors.toList());
+
+        return booksList.stream().map(
+                x -> getBook(x.getId())
+        ).toList();
     }
 
     public GetBookDTO updateBook(UpdateBookCommand command) {
@@ -44,23 +53,22 @@ public class BookControllerService {
         return modelMapper.map(bookForUpdate, GetBookDTO.class);
     }
 
-    public StatusDTO deleteBook(long id) {
+    public ResponseEntity<StatusDTO> deleteBook(long id) {
         if (bookManagementService.doesBookExist(id)) {
             bookManagementService.delete(id);
-            return new StatusDTO("Deleted id:" + id);
-        } else return new StatusDTO("Book by given id not found");
+            return ResponseEntity.ok(new StatusDTO("Deleted id:" + id));
+        } else return ResponseEntity.status(HttpStatus.NOT_FOUND).body(new StatusDTO("Book by given id not found"));
     }
 
-    public StatusDTO borrowBook(long idBook, long idStudent) {
-        Book bookToBorrow = bookManagementService.get(idBook);
-        bookToBorrow.setBorrowed(true);
-        bookToBorrow.setStudentId(idStudent);
-        bookToBorrow.setBorrowDate(LocalDate.now());
-        bookManagementService.edit(bookToBorrow);
-        return new StatusDTO("The book with id:" + idBook + " was borrowed to a student with id:" + idStudent);
-    }
-
-    public boolean isBookBorrowed(long id) {
-        return bookManagementService.isBookByIdBorrowed(id);
+    public ResponseEntity<StatusDTO> borrowBook(long idBook, long idStudent) {
+        if (!bookManagementService.isBookByIdBorrowed(idBook)) {
+            Book bookToBorrow = bookManagementService.get(idBook);
+            bookToBorrow.setBorrowed(true);
+            bookToBorrow.setStudentId(idStudent);
+            bookToBorrow.setBorrowDate(LocalDate.now());
+            bookManagementService.edit(bookToBorrow);
+            return ResponseEntity.ok(new StatusDTO("The book with id:" + idBook + " was borrowed to a student with id:" + idStudent));
+        } else
+            return ResponseEntity.status(HttpStatus.CONFLICT).body(new StatusDTO("The book with id:" + idBook + " is already borrowed"));
     }
 }
